{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f144cb09-a5a6-4661-9958-47a42c3622e5",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "d8ca8fd0-80e9-45b2-9fca-0b97c6a46c4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c5b5246a-4352-4e92-b57e-0127e2189287",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eee3a13d-d5d0-4475-84bd-a9e656678733",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouseScheme",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f9cb6c4-2f21-423f-b758-683b1dbe27a2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouseScheme",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouseScheme",
            "bindingGroup": "KeyboardMouseScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}